# mamba

./: .gitattributes  Cargo.toml  LICENSE  README.md
evaluator/: Cargo.toml
evaluator/src/: environment.rs  evaluator.rs  lib.rs
evaluator/src/stdlib/: mod.rs
examples/: arrays.mb  closures.mb  for_loops.mb  functions.mb  mutation.mb  variables.mb
lexer/: Cargo.toml
lexer/src/: lexer.rs
mamba-evaluator/: Cargo.toml
mamba-evaluator-old/: Cargo.toml
mamba-evaluator/src/: builtins.rs  environment.rs  evaluator.rs  lib.rs  object.rs
mamba-lexer/: Cargo.toml
mamba-lexer-old/src/: lib.rs
mamba-lexer/src/: lexer.rs  token.rs
mamba-parser/: Cargo.toml
mamba-parser-old/src/: parser.rs
mamba-parser/src/: ast.rs  parser.rs
parser/: Cargo.toml
parser/src/: ast.rs  parser.rs
src/: commands.rs  main.rs
src/evaluator/: builtins.rs  environment.rs  evaluator.rs  mod.rs  object.rs
src/lexer/: lexer.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs
