[package]
name = "mamba"
version = "0.1.1"
authors = ["Levi Bland <levi.bland@icloud.com>"]
edition = "2021"
homepage = "https://github.com/levibland/mamba"
repository = "https://github.com/levibland/mamba"
readme = "README.md"
license = "MIT"
description = "The Mamba Programming Language"

[workspace]
members = [
    "mamba-lexer-old",
    "mamba-parser",
    "mamba-evaluator",
]

[[bin]]
name = "mamba"
edition = "2021"
path = "src/main.rs"

[dependencies]
clap = "~2.31.2"
mamba_lexer = { path = "./mamba-lexer" }
mamba_parser = { path = "./mamba-parser" }
mamba_evaluator = { path = "./mamba-evaluator" }