[package]
name = "mamba"
version = "0.2.1"
authors = ["Levi Bland <levi.bland@icloud.com>"]
edition = "2021"
homepage = "https://github.com/levibland/mamba"
repository = "https://github.com/levibland/mamba"
readme = "README.md"
license = "MIT"
description = "The Mamba Programming Language"

[workspace]
members = [
    "lexer",
    "parser",
    "evaluator",
]

[[bin]]
name = "mamba"
edition = "2021"
path = "src/main.rs"

[dependencies]
clap = "~2.31.2"
lexer = { path = "./lexer" }
parser = { path = "./parser" }
evaluator = { path = "./evaluator" }